# matamong-fastapi-starter

./: README.md
matamong_project/: pyproject.toml
matamong_project/app/: main.py
matamong_project/app/api/: api.py
matamong_project/app/api/endpoints/: hello.py
matamong_project/app/core/: config.py
